--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "react-player": "^2.12.0",
     "socket.io": "^4.7.1"
   }
 }
